# motoko-dev-server

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  tests.yml
examples/: dfx.json
examples/counter/: Counter.mo
examples/vite-react/: README.md  dfx.json  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1673058295354.mjs
examples/vite-react/backend/: Main.mo
examples/vite-react/src/: App.css  App.tsx  ic.ts
src/: app.ts  cache.ts  canister.ts  command.ts  dfx.ts  index.ts  proxy.ts  replica.ts  server.ts  settings.ts  test.ts  testing.ts  wasm.ts  watch.ts
src/commands/: mo-dev.ts  mo-test.ts
src/routes/: canister.ts  docs.ts  icxProxy.ts  index.ts
src/utils/: cborBodyParser.ts  motoko.ts
tests/: devServer.test.ts  index.test.ts  mo-dev.test.ts  mo-test.test.ts
tests/project/: .gitignore  dfx.json  mops.toml
tests/project/motoko_canister/: Main.mo
tests/project/motoko_canister/lib/: Echo.mo
tests/project/motoko_canister/test/: DefaultPass.test.mo  ImportPass.test.mo  WasiError.test.mo  WasiFail.test.mo  WasiPass.test.mo
tests/project/vm/: dfx.json
tests/project/vm/tests/: Main.test.mo
tests/project/vm/vm_canister/: Main.mo
tests/project/vm_canister/: Main.mo
wasm/: Cargo.toml
wasm/src/: lib.rs
